fix: spacing 네이밍 수정

--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -2,18 +2,18 @@
 // Generated on Mon, 10 Jun 2024 05:44:00 GMT
 
 $h1-font-size: 52px;
-$4-xs: 2px;
-$3-xs: 4px;
-$2-xs: 8px;
-$xs: 12px;
-$s: 16px;
-$m: 24px;
-$l: 32px;
-$xl: 40px;
-$2-xl: 48px;
-$3-xl: 56px;
-$4-xl: 64px;
-$5-xl: 72px;
+$spacing-4-xs: 2px;
+$spacing-3-xs: 4px;
+$spacing-2-xs: 8px;
+$spacing-xs: 12px;
+$spacing-s: 16px;
+$spacing-m: 24px;
+$spacing-l: 32px;
+$spacing-xl: 40px;
+$spacing-2-xl: 48px;
+$spacing-3-xl: 56px;
+$spacing-4-xl: 64px;
+$spacing-5-xl: 72px;
 $black: #000000;
 $white: #ffffff;
 $gray-200: #f5f5f5;
